--- a/mypractice/src/assets/styles/components/button.css
+++ b/mypractice/src/assets/styles/components/button.css
@@ -42,7 +42,7 @@
 }
 
 .button:disabled {
-  opacity: 0.35;        /* làm mờ */
-  cursor: not-allowed; /* đổi con trỏ chuột */
-  pointer-events: none; /* chặn hover và click */
+  opacity: 0.35;    
+  cursor: not-allowed;
+  pointer-events: none; 
 }
